# backstage

./: .gitignore  .vercelignore  .watchmanconfig  README.md  package.json  tsconfig.json  vercel.json
.claude/: CLAUDE.md  settings.json  settings.local.json
.github/workflows/: e2e-tests.yml  release.yml  update-release-notes.yml
.husky/: pre-commit  pre-commit.old  prepare-commit-msg
apps/desktop/: .env.example  .gitignore  components.json  index.html  package.json
apps/desktop/e2e/test/: gallery.spec.js  setup.js  trash.spec.js  video_extractor.spec.js
apps/desktop/src/: App.tsx  index.css  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.bria.windows.conf.json  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: acp.rs  background_removal.rs  embeddings.rs  http_bridge.rs  lib.rs  main.rs  secure_storage.rs  upscale.rs  youtube_oauth.rs
apps/desktop/src/components/: AiProjectPage.tsx  AiProjectsGallery.tsx  ApiKeyDialog.tsx  ArchivePage.tsx  AutoRenameQueue.tsx  BackgroundRemovalQueue.tsx  BottomToolbar.tsx  CommandPalette.tsx  CustomerPortalDialog.tsx  ExplorePage.tsx  ExportDialog.tsx  FolderColorPicker.tsx  Gallery.tsx  GalleryPicker.tsx  GeminiImagePage.tsx  GlobalChat.tsx  ImageEditor.tsx  LicenseActivation.tsx  LicenseStatus.tsx  MyChannelPage.tsx  OnboardingPage.tsx  SearchHistoryDropdown.tsx  SettingsPage.tsx  ThumbnailGridItem.tsx  TitleBar.tsx  TrashPage.tsx  VersionGateModal.tsx  VideoExtractor.tsx  snow-flakes.tsx
apps/desktop/src/hooks/: use-acp-tool-runner.ts  use-app-updater.ts  use-drag-selection.ts  use-persisted-view-mode.ts  use-polar-checkout.ts  use-window-bounds.ts
apps/desktop/src/lib/: acp-client.ts  acp-tools.ts  agent-chat-adapter.ts  ai-project-storage.ts  apng-parser.ts  auto-adjust.ts  background-removal.ts  bg-removal-pipeline.ts  canvas-renderer.ts  data-versions.ts  db.ts  drag-preview.ts  embedding-provider.ts  fs-utils.ts  gemini-embedding.ts  gemini-image.ts  gemini-rename.ts  gemini-text.ts  gif-encoder.ts  github-releases.ts  hf-store.ts  icon-resolver.ts  image-file-utils.ts  local-embedding.ts  logger.ts  magic-select.ts  migration.ts  polar-config.ts  posthog.ts  raster-color.ts  recently-used.ts  revision-storage.ts  schema-migration.ts  semantic-search.ts  sounds.ts  svgl.ts  template-manager.ts  thumbnail-storage.ts  upscale.ts  video-encoder.ts  (+5 more)
apps/desktop/src/stores/: use-ai-project-store.ts  use-app-settings-store.ts  use-archive-store.ts  use-auto-rename-queue.ts  use-background-removal-queue.ts  use-editor-store.ts  use-embedding-store.ts  use-folder-store.ts  use-gallery-store.ts  use-gallery-ui-store.ts  use-license-store.ts  use-navigation-store.ts  use-revision-store.ts  use-search-history-store.ts  use-tabs-store.ts  use-yt-collections-store.ts  use-yt-favourites-store.ts  use-yt-my-channel-store.ts  use-yt-oauth-store.ts
apps/desktop/src/types/: apng-js.d.ts
apps/desktop/src/workers/: background-removal.worker.ts
apps/native/: .watchmanconfig  app.json  metro.config.js  package.json
apps/native/lib/: auth-client.ts
apps/server/: .env.example  package.json  portless.json  tsconfig.json  tsdown.config.ts
apps/server/src/: index.ts  tracing.ts
apps/server/src/lib/: posthog.ts
apps/server/src/middleware/: otel-logger.ts  otel.ts
apps/server/src/routes/: polar.ts
apps/web/: .env.example  components.json  next.config.ts  package.json  vercel.json
apps/web/src/: index.css  instrumentation.ts
apps/web/src-tauri/: Cargo.toml  tauri.conf.json
apps/web/src-tauri/capabilities/: default.json
apps/web/src-tauri/src/: lib.rs
apps/web/src/app/: layout.tsx  manifest.json  manifest.ts  page.tsx
apps/web/src/components/: LandingComponents.tsx  axiom-web-vitals.tsx  header.tsx  mode-toggle.tsx  posthog-provider.tsx  providers.tsx  scroll-fade-effect.tsx  sign-in-form.tsx  sign-up-form.tsx  tauri-init.tsx  user-menu.tsx  window-controls.tsx
(+132 files in other folders)
