[package]
name = "backstage"
version = "1.0.1"
description = "YouTube Thumbnail Studio"
authors = ["you"]
edition = "2021"

[lib]
name = "backstage_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-decorum = "1.1"
tauri-plugin-store = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
sqlite-vec = "0.1"

# Secure Storage Dependencies
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"
sha2 = "0.10"
once_cell = "1.19"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
futures-util = { version = "0.3", optional = true }
ort = { version = "2.0.0-rc.12", features = ["download-binaries"], optional = true }
image = { version = "0.25", optional = true }
tokio = { version = "1", features = ["rt"] }

[features]
bria = ["dep:futures-util", "dep:ort", "dep:image"]
