[package]
name = "backstage"
version = "1.4.0-beta.5"
description = "YouTube Thumbnail Studio"
authors = ["you"]
edition = "2021"

[lib]
name = "backstage_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-decorum = "1.1"
tauri-plugin-store = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
sqlite-vec = "0.1"

# Secure Storage Dependencies
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"
sha2 = "0.10"
once_cell = "1.19"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
futures-util = { version = "0.3", optional = true }
# Local embedding engine. Gated behind the `local-embeddings` feature (on by
# default) so it can be excluded on targets with no ort prebuilt — notably
# x86_64-apple-darwin, where pyke/Microsoft ship no ONNX Runtime binary. When
# excluded, the app falls back to Gemini embeddings at runtime.
# `fastembed` pulls `ort` transitively, so both must be optional under the
# feature, otherwise `ort` is dragged back in.
ort = { version = "2.0.0-rc.12", features = ["download-binaries"], optional = true }
image = { version = "0.25", optional = true }
# Local image + text embeddings: nomic-embed-vision-v1.5 / nomic-embed-text-v1.5,
# both 768-dim and aligned. Pins ort =2.0.0-rc.12, matching the version above.
fastembed = { version = "5", optional = true }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "net", "time", "io-util", "process"] }
axum = { version = "0.8" }
tauri-plugin-deep-link = "2"

[features]
default = ["local-embeddings"]
# Local, offline embeddings via fastembed/ONNX. Excluded on builds for targets
# without an ort prebuilt (e.g. macOS Intel) via `--no-default-features`.
local-embeddings = ["dep:fastembed", "dep:ort"]
bria = ["dep:futures-util", "dep:image"]

[dev-dependencies]
# Used by the embedding acceptance test to synthesize WebP fixtures (the format
# preview thumbnails are stored in) so the test exercises the real decode path.
image = { version = "0.25", features = ["webp"] }
